<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_lightning" translatable="false">Lightning</string>
    <string name="ytdl_package_name" translatable="false">com.cookiejarapps.smartcookieweb_ytdl</string>
    <string name="app_desc">A free and open source web browser that blocks ads and trackers</string>
    <string name="action_new_tab">New tab</string>
    <string name="action_share">Share</string>
    <string name="action_print">Print</string>
    <string name="action_history">History</string>
    <string name="action_bookmarks">Bookmarks</string>
    <string name="action_downloads">Downloads</string>
    <string name="action_add_bookmark">Add bookmark</string>
    <string name="action_copy">Copy link</string>
    <string name="action_forward">Forward</string>
    <string name="action_sort">Sort</string>
    <string name="settings">Settings</string>
    <string name="location">Location access</string>
    <string name="password">Save your passwords</string>
    <string name="agent">User agent</string>
    <string name="flash">Enable Adobe Flash</string>
    <string name="home">Homepage</string>
    <string name="action_menu">Menu</string>
    <string name="fullscreen">Hide URL bar while scrolling</string>
    <string name="java">Enable JavaScript</string>
    <string name="download">Download location</string>
    <string name="settings_advanced">Advanced settings</string>
    <string name="settings_advanced_explain">URL box contents, rendering mode, text encoding&#8230;</string>
    <string name="apache">Apache License 2.0</string>
    <string name="version">Application version</string>
    <string name="cache">Clear cache on exit</string>
    <string name="reflow">Enable text reflow</string>
    <string name="block">Block images</string>
    <string name="window">Allow sites to open new windows</string>
    <string name="cookies">Enable cookies</string>
    <string name="importbookmarks">Import bookmarks from browser</string>
    <string name="size">Text size</string>
    <string name="recommended">Recommended</string>
    <string name="search">Search engine</string>
    <string name="search_hint">Search or enter web address</string>
    <string name="wideViewPort">Use wide viewport</string>
    <string name="overViewMode">Load pages in overview mode</string>
    <string name="restore">Restore tabs on start</string>
    <string name="supported_browsers_title">Supported browsers</string>
    <string name="stock_browser">Stock browser</string>
    <string name="stock_browser_unavailable">No stock browser detected</string>
    <string name="stock_browser_available">Supported stock browser detected</string>
    <string name="fullScreenOption">Hide status bar while browsing</string>
    <string name="clear_cookies">Clear browser cookies</string>
    <string name="clear_history">Clear browser history</string>
    <string name="dialog_image">What would you like to do with this image?</string>
    <string name="action_download">Download</string>
    <string name="action_open">Open</string>
    <string name="dialog_link">What would you like to do with this link?</string>
    <string name="dialog_title_share">Share this page</string>
    <string name="dialog_history_long_press">What would you like to do with this history item?</string>
    <string name="dialog_bookmark">What would you like to do with this bookmark?</string>
    <string name="action_delete">Delete</string>
    <string name="action_blank">Blank page</string>
    <string name="agent_default">Default</string>
    <string name="agent_android_phone">Android (Phone)</string>
    <string name="agent_android_tablet">Android (Tablet)</string>
    <string name="agent_desktop">Windows (Chrome)</string>
    <string name="agent_ie11">Windows (IE 11)</string>
    <string name="agent_macos">macOS</string>
    <string name="agent_iphone">iPhone</string>
    <string name="agent_ipad">iPad</string>
    <string name="agent_symbian">Symbian</string>
    <string name="agent_mobile">Mobile</string>
    <string name="agent_custom">Custom</string>
    <string name="title_search_engine">Search engine</string>
    <string name="action_ok">OK</string>
    <string name="dialog_download">Do you want to download this file? (%1$s)</string>
    <string name="unknown_size">Unknown size</string>
    <string name="action_cancel">Cancel</string>
    <string name="title_warning">Warning</string>
    <string name="dialog_adobe_not_installed">Adobe Flash Player is not installed.\nPlease install Flash Player.</string>
    <string name="title_user_agent">Useragent</string>
    <string name="title_download_location">Download location</string>
    <string name="download_failed">Download failed with error:</string>
    <string name="download_successful">Download successful</string>
    <string name="title_custom_homepage">Custom homepage</string>
    <string name="action_webpage">Webpage</string>
    <string name="title_clear_history">Clear history</string>
    <string name="title_clear_cookies">Clear cookies</string>
    <string name="dialog_history">Would you like to clear your browser history?</string>
    <string name="dialog_cookies">Would you like to clear your browser cookies?</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="title_text_size">Text size</string>
    <string name="size_largest">Largest</string>
    <string name="size_large">Large</string>
    <string name="size_normal">Normal</string>
    <string name="size_small">Small</string>
    <string name="size_smallest">Smallest</string>
    <string name="title_error">Error</string>
    <string name="dialog_import_error">No browser was detected to import bookmarks from.</string>
    <string name="hint_title">Title</string>
    <string name="hint_url">URL</string>
    <string name="title_edit_bookmark">Edit bookmark</string>
    <string name="action_edit">Edit</string>
    <string name="action_incognito">New private tab</string>
    <string name="action_homepage">Default</string>
    <string name="action_back">Back</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_find">Find in page</string>
    <string name="download_pending">Starting download\u2026</string>
    <string name="cannot_download">Can only download HTTP or HTTPS URLs.</string>
    <string name="problem_download">Invalid URL encountered, cannot download</string>
    <string name="problem_location_download">Cannot download to the specified location</string>
    <string name="download_no_sdcard_dlg_title">No SD card</string>
    <string name="download_no_sdcard_dlg_msg">USB storage is required to download the file.</string>
    <string name="download_sdcard_busy_dlg_title">USB storage unavailable</string>
    <string name="download_sdcard_busy_dlg_msg">The storage is busy. To allow downloads, touch \'Turn Off USB Storage\' in the notification.</string>
    <string name="incognito_cookies">Enable cookies in private tabs</string>
    <string name="title_flash">Adobe Flash</string>
    <string name="action_manual">Manual</string>
    <string name="action_auto">Auto</string>
    <string name="action_follow_me">More info</string>
    <string name="url_insta" translatable="false">https://www.cookiegames.co.uk</string>
    <string name="clear_cache">Clear cache</string>
    <string name="message_cache_cleared">Cache cleared</string>
    <string name="message_import">Bookmarks were imported</string>
    <string name="message_clear_history">History cleared</string>
    <string name="message_cookies_cleared">Cookies cleared</string>
    <string name="max_tabs">Max tabs reached</string>
    <string name="message_text_copied">Text copied to clipboard</string>
    <string name="message_link_copied">Link copied to clipboard</string>
    <string name="message_blocked_local">Local file has been blocked from loading</string>
    <string name="licenses">Open Source Licenses</string>
    <string name="suggestion">Search for</string>
    <string name="block_ads">Block ads and trackers</string>
    <string name="message_insecure_connection">Connection to this site is not secure: %1$s Visit site anyway?</string>
    <string name="message_certificate_date_invalid">Date of certificate is invalid</string>
    <string name="message_certificate_expired">Certificate has expired</string>
    <string name="message_certificate_domain_mismatch">Domain in certificate does not match the site domain</string>
    <string name="message_certificate_invalid">Certificate is invalid</string>
    <string name="message_certificate_not_yet_valid">Certificate is not yet valid</string>
    <string name="message_certificate_untrusted">Certificate is not trusted</string>
    <string name="title_form_resubmission">Form resubmission</string>
    <string name="message_form_resubmission">Would you like to resend the submitted data?</string>
    <string name="message_location">\nWould like to use your location</string>
    <string name="action_allow">Allow</string>
    <string name="action_dont_allow">Don\'t allow</string>
    <string name="title_sign_in">Sign in</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="search_suggestions">Search suggestions</string>
    <string name="powered_by_google">Google</string>
    <string name="powered_by_duck">DuckDuckGo</string>
    <string name="powered_by_baidu">Baidu</string>
    <string name="powered_by_naver">Naver</string>
    <string name="search_engine_naver">Naver</string>
    <string name="shortcut_message_failed_to_add">Sorry, your launcher does not support shortcuts.</string>
    <string name="ssl_info_issued_by">Issued by</string>
    <string name="ssl_info_issued_to">Issued to</string>
    <string name="ssl_info_issued_on">Issued on</string>
    <string name="ssl_info_expires_on">Expires on</string>
    <string name="ssl_warning_dont_ask_again">Don\'t ask again for this browsing session.</string>
    <string name="dialog_tools_title">Page tools</string>
    <string name="dialog_toggle_desktop">Toggle desktop user agent</string>
    <string name="dialog_adblock_enable_for_site">Enable ad block for site</string>
    <string name="dialog_adblock_disable_for_site">Disable ad block for site</string>
    <string name="search_suggestions_off">No search suggestions</string>
    <string name="http_proxy">HTTP proxy</string>
    <string-array name="proxy_choices_array">
        <item>None</item>
        <item>Orbot</item>
        <item>I2P</item>
        <item>Manual</item>
    </string-array>
    <string-array name="password_set_array">
        <item>None</item>
        <item>Custom</item>
    </string-array>
    <string-array name="suggestion_name_array">
        <item>Three</item>
        <item>Four</item>
        <item>Five</item>
        <item>Six</item>
        <item>Seven</item>
        <item>Eight</item>
    </string-array>
    <string name="manual_proxy">Manual proxy</string>
    <string name="host">Host:</string>
    <string name="port">Port:</string>
    <string name="use_tor_prompt">It looks like you have Orbot installed. Do you want to use Tor?</string>
    <string name="use_i2p_prompt">It looks like you have I2P installed. Do you want to use I2P?</string>
    <string name="install_orbot">Install Orbot in order to proxy with Tor.</string>
    <string name="i2p_not_running">I2P is not running.</string>
    <string name="i2p_tunnels_not_ready">I2P tunnels are not ready yet.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="settings_about">About</string>
    <string name="tabs">Tabs</string>
    <string name="url_project" translatable="false">https://github.com/xxnonxxp11/yLoad</string>
    <string name="more">More Info</string>
    <string name="webview_version">WebView version</string>
</resources>